--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
   <meta property="og:description" content="Eira Cleaning offers family-safe, eco-conscious home cleaning using non-toxic products and HEPA vacuums. Based in Maitland.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://eira-cleaning.com.au">
-      <meta property="og:image" content="./assets/images/hero-image-1200.jpg">
+      <meta property="og:image" content="/images/hero-image-1200.jpg">
   <meta property="og:site_name" content="Eira Cleaning">
   
   <!-- Favicon -->
-      <link rel="icon" type="image/png" href="./assets/images/favicon.png">
+      <link rel="icon" type="image/png" href="/images/favicon.png">
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lora:wght@400;700&family=Quicksand:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -1762,7 +1762,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-              <img src="./assets/images/eira-logo.png" alt="Eira Cleaning – Professional eco-friendly house cleaning services in Maitland NSW" class="logo-img" loading="eager">
+              <img src="images/eira-logo.png" alt="Eira Cleaning – Professional eco-friendly house cleaning services in Maitland NSW" class="logo-img" loading="eager">
     </div>
     <nav class="nav-menu">
       <div class="hamburger">
@@ -1783,9 +1783,9 @@
   <!-- Hero Section -->
   <section class="hero" id="home">
     <picture>
-              <source media="(min-width: 1200px)" srcset="./assets/images/hero-image-1200.jpg">
-        <source media="(min-width: 768px)" srcset="./assets/images/hero-image-800.jpg">
-        <img class="hero-image" src="./assets/images/hero-image-800.jpg" alt="Eco-friendly house cleaning in Maitland – family living room with clean, healthy environment" loading="eager" />
+              <source media="(min-width: 1200px)" srcset="images/hero-image-1200.jpg">
+        <source media="(min-width: 768px)" srcset="images/hero-image-800.jpg">
+        <img class="hero-image" src="images/hero-image-800.jpg" alt="Eco-friendly house cleaning in Maitland – family living room with clean, healthy environment" loading="eager" />
     </picture>
     <div class="hero-overlay"></div>
     <div class="hero-content">
@@ -1805,7 +1805,7 @@
       <div class="services-grid">
         <div class="service-card">
           <h2 class="service-title">Signature Standard Clean</h2>
-          <img src="./assets/images/standard-icon.png" alt="Eco-friendly Signature Standard house cleaning in Maitland" class="service-icon" loading="lazy" />
+          <img src="images/standard-icon.png" alt="Eco-friendly Signature Standard house cleaning in Maitland" class="service-icon" loading="lazy" />
           <p class="service-desc">
             Reliable upkeep for weekly, fortnightly, or monthly cleaning. We use non-toxic, biodegradable products, HEPA-filter vacuums, and microfibre cloths to leave your home fresh, healthy, and safe for children, pets, and allergy-sensitive households.
           </p>
@@ -1813,7 +1813,7 @@
         </div>
         <div class="service-card">
           <h2 class="service-title">Detailed Deep Clean</h2>
-          <img src="./assets/images/deep-clean-icon.png" alt="Detailed Deep Clean service in Maitland with allergy-safe methods" class="service-icon" loading="lazy" />
+          <img src="images/deep-clean-icon.png" alt="Detailed Deep Clean service in Maitland with allergy-safe methods" class="service-icon" loading="lazy" />
           <p class="service-desc">
             Comprehensive top-to-bottom refresh for seasonal cleans, post-illness recovery, moving in, or special occasions. Extra attention to detail, hard-to-reach spots, and thorough allergen reduction for a healthier home environment.
           </p>
@@ -1861,8 +1861,8 @@
       <!-- Right Section - Image -->
       <div class="about-image">
         <picture>
-                  <source media="(min-width: 768px)" srcset="./assets/images/about-us-600.jpg">
-        <img src="./assets/images/about-us-400.jpg" alt="Professional house cleaning in Maitland – clean bedroom with HEPA vacuum and eco-friendly cleaning equipment" loading="lazy" />
+                  <source media="(min-width: 768px)" srcset="/images/about-us-600.jpg">
+        <img src="/images/about-us-400.jpg" alt="Professional house cleaning in Maitland – clean bedroom with HEPA vacuum and eco-friendly cleaning equipment" loading="lazy" />
         </picture>
       </div>
     </div>
