--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@
       </div>
       
       <div class="flex-center view-prices-section">
-        <button class="btn btn-primary ml-onclick-form" onclick="showPricingPopup()">View Pricing</button>
+        <button class="ml-onclick-form btn btn-primary" onclick="ml('show', 'Ayqnf2', true)">View Pricing</button>
       </div>
     </div>
   </section>
