--- a/index.html
+++ b/index.html
@@ -1648,10 +1648,14 @@
       </div>
     </div>
   </section>
-  
 
-
-
+  <!-- Hidden MailerLite Forms for Popups -->
+  <div style="display: none;">
+    <!-- Booking Form (Eu2Ebt) -->
+    <div class="ml-embedded" data-form="Eu2Ebt"></div>
+    <!-- Pricing Form (Ayqnf2) -->
+    <div class="ml-embedded" data-form="Ayqnf2"></div>
+  </div>
 
   <!-- Footer -->
   <footer>
