--- a/index.html
+++ b/index.html
@@ -1356,7 +1356,7 @@
         <a href="#about" class="nav-link">About</a>
         <a href="#areas" class="nav-link">Areas We Serve</a>
         <a href="#faqs" class="nav-link">FAQs</a>
-        <button class="ml-onclick-form btn btn-primary nav-cta" data-form="mlb2-29229292">Book Now</button>
+        <button class="ml-onclick-form nav-link nav-cta" data-form="mlb2-29229292">Book Now</button>
       </div>
     </nav>
   </header>
@@ -1578,10 +1578,20 @@
       </div>
     </div>
   </section>
-  
 
-
-
+  <!-- Contact Form Section -->
+  <section class="contact-form section" id="contact-form">
+    <div class="contact-form-content">
+      <div class="contact-form-subtitle">
+        <h2>Have a Question? We're Listening</h2>
+        <p>Whether you're just looking or ready to book, we're here to help you understand what we offer and what your home needs.</p>
+      </div>
+      <div class="contact-form-actions">
+        <a href="tel:+61421298668" class="btn btn-primary">Call Us</a>
+        <a href="mailto:hello@eiracleaning.com.au" class="btn btn-secondary">Email Us</a>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
