--- a/index.html
+++ b/index.html
@@ -1279,7 +1279,7 @@
         <a href="#about" class="nav-link">About</a>
         <a href="#areas" class="nav-link">Areas We Serve</a>
         <a href="#faqs" class="nav-link">FAQs</a>
-        <button class="ml-onclick-form" onclick="ml('show', 'Eu2Ebt', true)">Book Now</button>
+        <button class="btn btn-primary ml-onclick-form" onclick="ml('show', 'Eu2Ebt', true)">Book Now</button>
       </div>
     </nav>
   </header>
@@ -1294,7 +1294,7 @@
     <div class="hero-content">
       <h1 class="hero-title">Eco-Friendly, Allergy-Safe House Cleaning in Maitland</h1>
       <p class="hero-subtitle">Non-toxic products • HEPA-filter vacuums • Safe for kids, pets & sensitive households</p>
-              <button class="ml-onclick-form" onclick="ml('show', 'Eu2Ebt', true)">Book Now</button>
+              <button class="btn btn-primary ml-onclick-form" onclick="ml('show', 'Eu2Ebt', true)">Book Now</button>
       <p class="hero-social-proof">Trusted by families across Maitland.</p>
     </div>
     <div class="scroll-indicator" onclick="document.getElementById('services').scrollIntoView({behavior:'smooth'});">
@@ -1312,7 +1312,7 @@
           <p class="service-desc">
             Reliable upkeep for weekly, fortnightly, or monthly cleaning. We use non-toxic, biodegradable products, HEPA-filter vacuums, and microfibre cloths to leave your home fresh, healthy, and safe for children, pets, and allergy-sensitive households.
           </p>
-          <button class="ml-onclick-form" onclick="ml('show', 'Eu2Ebt', true)">Book This Service</button>
+          <button class="btn btn-primary ml-onclick-form" onclick="ml('show', 'Eu2Ebt', true)">Book This Service</button>
         </div>
         <div class="service-card">
           <h2 class="service-title">Detailed Deep Clean</h2>
@@ -1320,7 +1320,7 @@
           <p class="service-desc">
             Comprehensive top-to-bottom refresh for seasonal cleans, post-illness recovery, moving in, or special occasions. Extra attention to detail, hard-to-reach spots, and thorough allergen reduction for a healthier home environment.
           </p>
-          <button class="ml-onclick-form" onclick="ml('show', 'Eu2Ebt', true)">Book This Service</button>
+          <button class="btn btn-primary ml-onclick-form" onclick="ml('show', 'Eu2Ebt', true)">Book This Service</button>
         </div>
       </div>
       
@@ -1334,7 +1334,7 @@
       </div>
       
       <div class="flex-center view-prices-section">
-        <button class="ml-onclick-form" onclick="ml('show', 'Ayqnf2', true)">View Pricing</button>
+        <button class="btn btn-secondary ml-onclick-form" onclick="ml('show', 'Ayqnf2', true)">View Pricing</button>
       </div>
     </div>
   </section>
